[package]
name = "bevy-s2n-quic"
version = "0.18.3"
edition = "2024"
description = "An Aeronet compatible Bevy plugin providing network IO with QUIC based on s2n-quic"
readme = "README.md"
repository = "https://github.com/CorneliusCornbread/bevy-quic-networking"
documentation = "https://docs.rs/bevy-s2n-quic"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "networking", "bevy", "aeronet", "quic"]
categories = ["game-development", "network-programming"]

[dependencies]
aeronet_io = "0.20.0"
bevy = "0.18.1"
bytes = "1.11.1"
futures = "0.3.32"
s2n-quic = "1.81.0"
s2n-quic-tls = "0.81.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.44"

[dev-dependencies]
bevy = { version = "0.18.1", features = ["bevy_remote"] }

[features]
default = ["performance-warns"]

## Creates error components/entities when connections fail
connection-errors = []

## Creates error components/entities when streams fail
stream-errors = []

## Should we warn if buffers are being filled faster than we can drain them?
performance-warns = []
